# AntiDrone-Radar-FDTD

./: README.md  pyproject.toml
config/: default.yaml
src/antidrone/classification/: classifier.py
src/antidrone/fdtd/: geometry.py  huygens.py  postprocess.py  scattering_response.py
src/antidrone/fdtd/core/: boundaries.py  fields.py  grid.py  sources.py
src/antidrone/fdtd/scripts/: generate_bistatic_rcs_grid.py
src/antidrone/output/: mqtt_publisher.py  visualizer.py
src/antidrone/radar/: cfar.py  detect.py  fmcw.py  fmcw_bistatic_from_rcs.py  fmcw_from_rcs.py  pipeline.py  range_doppler.py  tracker_manager.py  tracking.py
src/antidrone/scripts/: demo_fdtd_bistatic_dataset.py  demo_radar_fmcw.py
tests/: test_bistatic_pipeline.py  test_fdtd_smoke.py  test_radar_pipeline.py
